@@ -35,6 +35,13 @@ Type Objects
    .. versionadded:: 2.2
 
 
+.. cfunction:: unsigned int PyType_ClearCache(void)
+
+   Clears the internal lookup cache. Return the current version tag.
+
+   .. versionadded:: 2.6
+
+
 .. cfunction:: int PyType_HasFeature(PyObject *o, int feature)
 
    Return true if the type object *o* sets the feature *feature*.  Type features
